# cs224g-triage

./: .env  .gitignore  COMMIT_EDITMSG  DataTriage.json  Guidelines.json  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  run.py
Penn/: A.JSON  B.JSON  C.JSON  E.json  F.json  G.json  I.json  J.json  S.json  n.json  o.json  p.json  project-structure  requirements.txt  t.json
Penn/data/conditions/: asthma.json  diabetes.json
Penn/src/: scraper.py
guideocrpipe/: README.md  medical_guideline_scraper.py  requirements.txt
guideocrpipe/src/: guideline_interpreter.py  ocr_pipeline.py
guideocrpipe/src/schemas/: DataTriage.json
medical_data/: A.JSON  D.json  H.json  K.json  L.json  R.json  U.json  V.json  Y.json  Z.json  m.json  w.json
medical_data/data/conditions/: asthma_clinical.json  asthma_triage.json  condition_categories.json
medical_data/src/: scraper.py  utils.py
pipelines/: medical_guideline_scraper.py
pipelines/ocr/: example_usage.py  ocr_pipeline.py
pipelines/ocr/schemas/: Guidelines.json  (+1 more)
public/: index.html
src/: App.css  App.js  medical_data.py  prompts.py  pyproject.toml
src/api/: auth_routes.py  auth_verification.py  config.py  lang.py  main.py  models.py  provider_endpoints.py  pydantic_core-2.16.2-cp38-cp38-macosx_10_12_x86_64.whl  requirements.txt  routes.py  seed_db.py
src/api/services/: auth_service.py  db_service.py  llm_service.py  medical_data.py  prompts.py  triage_service.py
triage-next/: package-lock.json  package.json
triage-next/app/: App.css  config.ts  layout.tsx  page.tsx  prompts.js  styles.css
(+11 files in other folders)
